Some CSS, favicon etc

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/leaverou/lea.verou.me.git"
   },
   "author": "Lea Verou",
-  "license": "MIT",
+  "license": "",
   "bugs": {
     "url": "https://github.com/leaverou/lea.verou.me/issues"
   },
