--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@11ty/eleventy": "^2.0.0",
     "concurrently": "^8.0.0",
     "documentation": "^14.0.1",
+    "eleventy-plugin-embed-twitter": "^1.3.7",
+    "eleventy-plugin-toc": "^1.1.5",
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-attrs": "^4.1.6",
     "postcss": "^8.3.9",
