--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "concurrently": "^8.0",
     "eleventy-plugin-embed-everything": "^1",
     "eleventy-plugin-toc": "^1",
+    "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8",
     "markdown-it-attrs": "^4",
     "markdown-it-replace-link": "^1",
