--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8",
     "markdown-it-attrs": "^4",
+    "markdown-it-footnote": "^3.0.3",
     "plur": "^5",
     "postcss": "^8",
     "postcss-cli": "^10",
