--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "markdown-it-anchor": "^8",
     "markdown-it-attrs": "^4",
     "markdown-it-footnote": "^3.0.3",
+    "markdown-it-mathjax3": "^4.3.2",
     "plur": "^5",
     "postcss": "^8",
     "postcss-cli": "^10",
