--- a/files/stateof/features-yml/features.yml
+++ b/files/stateof/features-yml/features.yml
@@ -1,4 +1,35 @@
-- id: slot
+- id: shadow_dom
+  name: Shadow DOM
+  description: Encapsulate elements not visible from the outside, and style them
+    with CSS not affecting the rest of the page.
+  example:
+    language: html
+    code: |
+      this.shadowRoot = this.attachShadow({mode: "open"});
+  mdn: en-US/docs/Web/API/Web_components/Using_shadow_DOM
+- id: selectmenu
+  name: "`<selectmenu>`"
+  description: |-
+    ```html
+    <selectmenu>
+    	<option>Option 1</option>
+    	<option>Option 2</option>
+    	<option>Option 3</option>
+    </selectmenu>
+  resources:
+    - url: https://open-ui.org/components/selectmenu/
+      title: Selectmenu Element (Explainer) | Open UI
+    - url: https://web.dev/state-of-css-2022/#customizing-select-elements
+      title: State of CSS 2022
+    - url: https://css-tricks.com/the-selectmenu-element/
+      title: The selectmenu HTML Tag | CSS-Tricks - CSS-Tricks
+    - url: https://www.smashingmagazine.com/2023/06/advanced-form-control-styling-selectmenu-anchoring-api/
+      title: Advanced Form Control Styling With Selectmenu And Anchoring API —
+        Smashing Magazine
+    - url: https://hidde.blog/custom-select-with-selectmenu/
+    - url: https://microsoftedge.github.io/Demos/selectmenu/
+      title: Open UI's selectmenu demos
+- id: slot_assignment
   name: Explicit slot assignment (`slot="foo"`)
   description: Allows assigning light DOM elements to named slots.
   example:
@@ -11,7 +42,7 @@
   resources:
     - url: https://html.spec.whatwg.org/multipage/dom.html#attr-slot
       title: HTML Standard
-- id: portal
+- id: portal_element
   name: "`<portal>`"
   description: Enables the embedding of another HTML page into the current one for
     the purposes of allowing smoother navigation into new pages.
@@ -52,7 +83,7 @@
   resources:
     - url: https://html.spec.whatwg.org/multipage/embedded-content.html#the-img-element
       title: HTML Standard
-- id: model
+- id: model_element
   name: "`<model>` for AR/VR/3D content"
   description: Allows embedding 3D graphical content into HTML.
   example:
@@ -108,7 +139,7 @@
       title: "HTMLMediaElement controlsList · Issue #643 · w3ctag/design-reviews ·
         GitHub"
   caniuse: mdn-api_htmlmediaelement_controlslist
-- id: popover
+- id: popover_api
   name: Popover API
   description: HTML syntax and JS API facilitating popovers such as overlays,
     popups, menus etc.
@@ -142,7 +173,7 @@
     - url: https://web.dev/browser-level-image-lazy-loading/
       title: Browser-level image lazy loading for the web
   caniuse: loading-lazy-attr
-- id: sandbox
+- id: sandbox_attr
   name: "`sandbox` attribute for iframes"
   description: Applies restrictions to the content embedded in the `<iframe>`.
   example:
@@ -154,7 +185,7 @@
     - url: https://html.spec.whatwg.org/multipage/iframe-embed-object.html#attr-iframe-sandbox
       title: HTML Standard
   caniuse: iframe-sandbox
-- id: details
+- id: details_element
   name: "`<details>` and `<summary>`"
   description: A disclosure widget that can be toggled to hide or show content
     interactively.
@@ -250,7 +281,7 @@
       title: RDFa - Wikipedia
     - url: https://almanac.httparchive.org/en/2022/structured-data
       title: Structured Data | 2022 | The Web Almanac by HTTP Archive
-- id: dialog
+- id: dialog_element
   name: "`<dialog>`"
   description: For dialog boxes or other interactive components, such as a
     dismissible alerts, or subwindows.
@@ -327,7 +358,7 @@
       title: Exclusive Accordion (Explainer) | Open UI
     - url: https://chromestatus.com/feature/6710427028815872
       title: Chrome Platform Status
-- id: template
+- id: template_element
   name: "`<template>`"
   description: A mechanism for holding HTML that is not to be rendered immediately
     but may be utilized later via JS.
@@ -401,6 +432,42 @@
       </div> 
   mdn: en-US/docs/Web/Accessibility/ARIA/Attributes
   w3c: TR/wai-aria-1.2/
+- id: rh_preconnect
+  name: "Resource Hints: preconnect (`<link rel=preconnect>`)"
+  description: Speed up future loads from a given origin by preemptively
+    performing part or all of the DNS+TCP+TLS handshake.
+  example:
+    language: html
+    code: |
+      <link rel="preconnect" href="(url)" />
+  mdn: en-US/docs/Web/HTML/Attributes/rel/preconnect
+  resources:
+    - url: https://html.spec.whatwg.org/multipage/links.html#link-type-preconnect
+  caniuse: link-rel-preconnect
+- id: rh_prerender
+  name: "Resource Hints: prerender (`<link rel=prerender>`)"
+  description: A hint to browsers that the user might need the target resource for
+    the next navigation
+  example:
+    language: html
+    code: |
+      <link rel="prerender" href="(url)" />
+  mdn: en-US/docs/Web/HTML/Attributes/rel/prerender
+  resources:
+    - url: https://html.spec.whatwg.org/multipage/links.html#link-type-prerender
+  caniuse: link-rel-prerender
+- id: rh_preload
+  name: "Resource Hints: preload (`<link rel=preload>`)"
+  description: Start loading certain resources early in the page lifecycle.
+  example:
+    language: html
+    code: |
+      <link rel="preload" href="(url)" />
+  mdn: en-US/docs/Web/HTML/Attributes/rel/preload
+  resources:
+    - url: https://html.spec.whatwg.org/multipage/links.html#link-type-preload
+    - url: https://www.smashingmagazine.com/2016/02/preload-what-is-it-good-for/
+  caniuse: link-rel-preload
 - id: resource_hints
   name: Resource Hints (all)
   description: Begin work on certain resources earlier to improve performance.
@@ -417,6 +484,17 @@
     - url: https://blog.logrocket.com/understanding-css-preload-other-resource-hints/
       title: Understanding CSS preload and other resource hints - LogRocket Blog
     - url: https://medium.com/@luisvieira_gmr/html5-prefetch-1e54f6dda15d
+- id: rh_prefetch
+  name: "Resource Hints: prefetch (`<link rel=prefetch>`)"
+  description: Prefetch a resource so it can be loaded more quickly.
+  example:
+    language: html
+    code: |
+      <link rel="prefetch" href="(url)">
+  mdn: en-US/docs/Web/HTML/Attributes/rel/prefetch
+  resources:
+    - url: https://html.spec.whatwg.org/multipage/links.html#link-type-prefetch
+  caniuse: link-rel-prefetch
 - id: declarative_shadow
   name: Declarative Shadow DOM (`<template shadowrootmode="open">`)
   description: Define shadow trees with HTML.
@@ -479,7 +557,7 @@
   mdn: en-US/docs/Web/HTML/Global_attributes/part
   w3c: TR/css-shadow-parts-1/#part-attr
   caniuse: mdn-html_global_attributes_part
-- id: part
+- id: part_selector
   name: Styling component parts (`::part()`)
   description: A way to style shadow DOM elements that have opted in to being
     stylable from the outside.
@@ -491,7 +569,7 @@
       }
   mdn: en-US/docs/Web/CSS/::part
   w3c: TR/css-shadow-parts-1/#part
-- id: svg
+- id: svg_element
   name: Inline SVG (`<svg>`)
   description: Embed SVG vector graphics directly in markup
   example:
@@ -502,7 +580,7 @@
       </svg>
   mdn: en-US/docs/Web/SVG/Element/svg
   w3c: TR/SVG2/struct.html#NewDocument
-- id: math
+- id: math_element
   name: Inline MathML (`<math>`)
   description: Display math directly in HTML, using MathML.
   example:
@@ -529,15 +607,6 @@
     - url: https://github.com/WICG/webcomponents/blob/gh-pages/proposals/Scoped-Custom-Element-Registries.md
     - url: https://chromestatus.com/feature/5090435261792256
       title: Chrome Platform Status
-- id: shadow_dom
-  name: Shadow DOM
-  description: Encapsulate elements not visible from the outside, and style them
-    with CSS not affecting the rest of the page.
-  example:
-    language: html
-    code: |
-      this.shadowRoot = this.attachShadow({mode: "open"});
-  mdn: en-US/docs/Web/API/Web_components/Using_shadow_DOM
 - id: navigation_api
   name: Navigation API
   description: Initiate, intercept, and manage navigation actions, examine history
@@ -569,7 +638,7 @@
   resources:
     - url: https://html.spec.whatwg.org/multipage/custom-elements.html#dom-customelementregistry-define-dev
       title: HTML Standard
-- id: track
+- id: track_element
   name: "`<track>` element"
   description: Provides subtitles or closed caption tracks for multimedia content.
   example:
@@ -792,7 +861,7 @@
     - url: https://www.stefanjudis.com/blog/the-inert-attribute-is-finally-coming-to-the-web/
       title: The "inert" attribute is finally coming to the web | Stefan Judis Web
         Development
-- id: picture
+- id: picture_element
   name: "`<picture>`"
   description: A responsive images method to control which image resource a user
     agent presents to a user, based on various factors.
@@ -809,28 +878,6 @@
     - url: https://html.spec.whatwg.org/multipage/embedded-content.html#the-picture-element
       title: HTML Standard
   caniuse: picture
-- id: selectmenu
-  name: "`<selectmenu>`"
-  description: |-
-    ```html
-    <selectmenu>
-    	<option>Option 1</option>
-    	<option>Option 2</option>
-    	<option>Option 3</option>
-    </selectmenu>
-  resources:
-    - url: https://open-ui.org/components/selectmenu/
-      title: Selectmenu Element (Explainer) | Open UI
-    - url: https://web.dev/state-of-css-2022/#customizing-select-elements
-      title: State of CSS 2022
-    - url: https://css-tricks.com/the-selectmenu-element/
-      title: The selectmenu HTML Tag | CSS-Tricks - CSS-Tricks
-    - url: https://www.smashingmagazine.com/2023/06/advanced-form-control-styling-selectmenu-anchoring-api/
-      title: Advanced Form Control Styling With Selectmenu And Anchoring API —
-        Smashing Magazine
-    - url: https://hidde.blog/custom-select-with-selectmenu/
-    - url: https://microsoftedge.github.io/Demos/selectmenu/
-      title: Open UI's selectmenu demos
 - id: client_hints
   name: HTTP client hints
   description: |-
