--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ blog/tags/*
 # Early drafts
 blog/2023/self-closing-defense
 blog/2023/product
-blog/2023/eng-momentum-prioritization
+blog/2023/eng-momentum
+blog/2023/text-based-formats
 
 # Local Netlify folder
 .netlify
