--- a/data/projects.json
+++ b/data/projects.json
@@ -88,7 +88,7 @@
 			"featured": 0
 		},
 		{
-			"url": "https://projects.verou.me/stretchy",
+			"url": "https://stretchy.verou.me/",
 			"image": "https://lea.verou.me/wp-content/uploads/2015/07/Screen-Shot-2015-07-25-at-18.40.13--300x204.png",
 			"name": "Stretchy",
 			"description": "Form element autosizing, the way it should be.",
