--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8",
     "markdown-it-attrs": "^4",
+    "markdown-it-deflist": "^3.0.0",
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-mathjax3": "^4.3.2",
     "plur": "^5",
