--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ blog/2023/self-closing-defense
 blog/2023/product
 blog/2023/eng-momentum
 blog/2023/text-based-formats
+blog/2024/case-study-sentiment-ui
+blog/2024/web-standards-product-hard-mode
 
 # Local Netlify folder
 .netlify
